apps/echo-gtw/compression.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: http-echo-compression
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-echo
  compressor:
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
    - type: Zstd
      zstd: {}
